# c99

./: .clang-format  .gitignore  CMakeLists.txt  go.mod  makefile  readme.md
src/: helpers.h  lexer.h  main.c
src/ast/: ast.c  ast.h  empty_block.c  empty_block.h  function_def.c  function_def.h
src/ds/: ast.h  list.c  list.h  token_list.h  tokens.c  tokens.h
src/parse/: lexer.c  lexer.h  parser.c  parser.h
src/parsing/: parser.c  parser.h  tokens.c  tokens.h
